2005-12-07  Tor Lillqvist  <tml@novell.com>

	* lib
	* xntlm: Remove these directories from CVS. (Not being used, not
	mentioned in Makefile.am. The code from these directories has been
	moved to e-d-s some time ago.)

	* shell: Remove this directory too. It was compiled, and the
	resulting libfoldertree.la was being linked to
	storage/evolution-exchange-storage. But in fact, the code was
	duplicated in e-d-s's libexchange-storage-1.2.la. This caused a
	hard-to-find problem on Win32, but happened not to have any ill
	effects on Linux. Sushma says it's OK to remove it.

	* Makefile.am: Drop shell from SUBDIRS.

	* configure.in: Drop shell/Makefile from here.

	* storage/Makefile.am: Drop shell/libfoldertree.la from
	evolution_exchange_storage_LDADD.

	* addressbook/Makefile.am
	* calendar/Makefile.am
	* mail/Makefile.am
	* storage/Makefile.am: Remove references to the shell directory
	from CFLAGS, too.
	
	* storage/e-folder-exchange.c
	* storage/e-folder-exchange.h
	* storage/exchange-account.c
	* storage/exchange-folder-size.c
	* storage/exchange-folder-size.h
	* storage/exchange-hierarchy.c
	* storage/exchange-hierarchy.h
	* storage/exchange-hierarchy-favorites.c
	* storage/exchange-hierarchy-favorites.h
	* storage/exchange-hierarchy-gal.c
	* storage/exchange-hierarchy-gal.h
	* storage/exchange-hierarchy-somedav.c
	* storage/exchange-hierarchy-somedav.h
	* storage/exchange-hierarchy-webdav.c
	* storage/exchange-hierarchy-webdav.h
	* storage/exchange-types.h
	* storage/exchange-oof.c
	* storage/exchange-oof.h: Remove unused files (have been moved to
	e-d-s).

	* storage/exchange-hierarchy-foreign.c: This was being compiled
	into the executables here, but it has also actually moved to
	e-d-s. Having it duplicated here caused weird problems on Win32,
	even if happened to work on Linux (due to differences in how
	dynamic linking works). So remove.

	* storage/exchange-hierarchy-foreign.h: Ditto, has moved in e-d-s,
	remove.

	* Makefile.am: Remove from here, too.
	