@@ -1,3 +1,8 @@
+2005-12-10  Sushma Rai  <rsushma@novell.com>
+
+	* calendar/e-cal-backend-exchange.c (open_calendar): Return
+	authentication failure error code if exchange_account_connect() fails.
+
 2005-12-07  Tor Lillqvist  <tml@novell.com>
 
 	* lib
